--- a/Serendipity/.classpath
+++ b/Serendipity/.classpath
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_40">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/apache-jena-3.1.1/lib/collection-0.6.jar"/>
@@ -40,6 +36,7 @@
 	<classpathentry kind="lib" path="C:/apache-jena-3.1.1/lib/slf4j-log4j12-1.7.21.jar"/>
 	<classpathentry kind="lib" path="C:/apache-jena-3.1.1/lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/apache-jena-3.1.1/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="D:/Users/jeronimo.eichler/Desktop/proposta/legado/soltool.jar"/>
+	<classpathentry kind="lib" path="libs/sol-engine-1.1.2-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
